rm commons-io
Signed-off-by: Stefan Bischof <stbischof@bipolis.org>